crates/ink/tests/ui/trait_def/fail/message_payable_invalid_1.stderr
error: encountered unknown ink! attribute argument: payable
 --> tests/ui/trait_def/fail/message_payable_invalid_1.rs:3:20
  |
3 |     #[ink(message, payable = false)]
  |                    ^^^^^^^
